--- a/link/package.json
+++ b/link/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fullcalendar/core": "^6.1.15",
@@ -19,9 +20,12 @@
     "@testing-library/user-event": "^13.5.0",
     "@toolpad/core": "^0.10.0",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
     "dayjs": "^1.11.13",
+    "fullcalendar": "^6.1.15",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.1",
     "react-scripts": "5.0.1",
